# alpha-backend/src/main/java/com/alphabackend/controller/TagController.java
@@ -4,33 +4,44 @@ import com.alpha.generated.api.TagApi;
 import com.alpha.generated.model.ResultDto;
 import com.alpha.generated.model.TagDto;
 import com.alpha.generated.model.TagList;
+import com.alphabackend.service.TagService;
+import lombok.AllArgsConstructor;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
+@AllArgsConstructor
 public class TagController implements TagApi {
+    public final TagService tagService;
+
     @Override
+    @CrossOrigin
     public ResponseEntity<TagDto> _addTag(TagDto tagDto) {
-        return null;
+        return ResponseEntity.ok(this.tagService.addTag(tagDto));
     }
 
     @Override
-    public ResponseEntity<ResultDto> _deleteTag(String idTag) {
-        return null;
+    @CrossOrigin
+    public ResponseEntity<ResultDto> _deleteTag(Long idTag) {
+        return ResponseEntity.ok(this.tagService.deleteTag(idTag));
     }
 
     @Override
+    @CrossOrigin
     public ResponseEntity<TagList> _getAllTag() {
-        return null;
+        return ResponseEntity.ok(new TagList(this.tagService.getAllTags()));
     }
 
     @Override
-    public ResponseEntity<TagDto> _getTag(String idTag) {
-        return null;
+    @CrossOrigin
+    public ResponseEntity<TagDto> _getTag(Long idTag) {
+        return ResponseEntity.ok(this.tagService.getTag(idTag));
     }
 
     @Override
-    public ResponseEntity<TagDto> _modifyTag(String idTag, TagDto tagDto) {
-        return null;
+    @CrossOrigin
+    public ResponseEntity<TagDto> _updateTag(Long idTag, TagDto tagDto) {
+        return ResponseEntity.ok(this.tagService.updateTag(idTag, tagDto));
     }
 }
