# alpha-openapi/src/main/resources/openapi/components/api/tag.yaml
@@ -10,7 +10,8 @@ tagGetById:
         description: ID du tag
         required: true
         schema:
-          type: string
+          type: integer
+          format: int64
     responses:
       '200':
         description: SUCCESS
@@ -76,19 +77,20 @@ tagAdd:
       '500':
         $ref: '../common/common-responses.yaml#/components/responses/500'
 
-tagModify:
+tagUpdate:
   put:
     tags:
       - Tag
     summary: Modifie un tag
-    operationId: modifyTag
+    operationId: updateTag
     parameters:
       - name: idTag
         in: path
         description: ID du tag
         required: true
         schema:
-          type: string
+          type: integer
+          format: int64
     requestBody:
       content:
         application/json:
@@ -122,7 +124,8 @@ tagDeleteById:
         description: ID du tag
         required: true
         schema:
-          type: string
+          type: integer
+          format: int64
     responses:
       '200':
         description: SUCCESS
